kubectl/conv-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: conv-conv-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      components: converter
  template:
    metadata:
      labels:
        components: converter
    spec:
      containers:
        - name: conv-conv
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: conv-data
              mountPath: /opt/app/uploads
      volumes:
        - name: conv-data
          persistentVolumeClaim:
            claimName: conv-pvc
