kubectl/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: rabbitmq
  template:
    metadata:
      labels:
        components: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8.34
          ports:
            - containerPort: 5672
          resources:
            limits:
              memory: "1Gi"
              cpu: "300m"
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
