kubectl/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
spec:
  type: ClusterIP
  ports:
    - port:  5672
      protocol: "TCP"
  selector:
    components: rabbitmq
